--- a/TestingEz/src/main/resources/templates/all-tests.html
+++ b/TestingEz/src/main/resources/templates/all-tests.html
@@ -5,7 +5,6 @@
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-3">
     <div th:replace="~{fragments/headers :: header}"></div>
-
     <main class="container d-flex flex-column justify-content-center flex-grow-1">
         <h3 th:text="#{myTests}"></h3>
         <div class="container bg-light shadow rounded border border-2 p-5">
@@ -25,19 +24,19 @@
                     <span th:text="#{lastUpdated} + ' ' + ${test.dateUpdated}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
-                    <a class="btn btn-dark px-3 border border-2 rounded"
+                    <a class="btn btn-dark px-3 border border-2 border-black rounded"
                        th:text="#{details}"
                        th:href="@{/test/details/{id}(id=${test.id})}">
                     </a>
                 </div>
             </div>
             <div class="d-flex justify-content-center gap-1">
-                <a class="btn btn-dark text-center px-3 py-1 shadow rounded border border-2"
+                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
                    th:href="@{/test/all(page=${paginatedTests.number - 1}, size=${paginatedTests.size})}"
                    th:if="${paginatedTests.hasPrevious()}">
                     <img src="/images/left-arrow.png" alt="<<" style="width: 25px; height: auto;">
                 </a>
-                <a class="btn btn-dark text-center px-3 py-1 shadow rounded border border-2"
+                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
                    th:href="@{/test/all(page=${paginatedTests.number + 1}, size=${paginatedTests.size})}"
                    th:if="${paginatedTests.hasNext()}">
                     <img src="/images/right-arrow.png" alt=">>" style="width: 25px; height: auto;">
@@ -47,5 +46,6 @@
     </main>
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
