points added to the leaderboard

--- a/TestingEz/src/main/resources/templates/leaderboard.html
+++ b/TestingEz/src/main/resources/templates/leaderboard.html
@@ -21,6 +21,9 @@
                 <div class="col-sm-12 col-md-2 text-center">
                     <span class="fs-5 text-white" th:text="#{status} + ' ' +  ${thinResult.status}"></span>
                 </div>
+                <div class="col-sm-12 col-md-2 text-center">
+                    <span class="fs-5 text-white" th:text="#{pointss} + ' ' +  ${thinResult.points}"></span>
+                </div>
                 <div class="col-sm-12 col-md-2 text-center ">
                     <span class="fs-5 text-white" th:text="#{result} + ' ' + ${thinResult.result}"></span>
                 </div>
