--- a/TestingEz/src/main/resources/templates/my-profile.html
+++ b/TestingEz/src/main/resources/templates/my-profile.html
@@ -72,8 +72,8 @@
                         readonly
                         type="text"
                         th:value="'Role: ' + *{role}">
-                <a th:href=" @{/user/profile/edit}"
-                   class="btn btn-warning rounded text-center border border-2 w-50 fs-5"
+                <a th:href=" @{/user/my-profile/edit}"
+                   class="btn btn-dark rounded text-center border border-2 border-black w-50 fs-5"
                    th:text="#{editProfile}">
                 </a>
             </div>
