--- a/TestingEz/src/main/resources/templates/my-profile-edit.html
+++ b/TestingEz/src/main/resources/templates/my-profile-edit.html
@@ -111,6 +111,7 @@
             <div class="col-sm-8 col-md-4">
                 <button type="button"
                         class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
+                        disabled
                         th:text="#{deleteAccount}">
                 </button>
             </div>
