feedback.html created

--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -8,19 +8,19 @@
         <footer class="container bg-light">
             <ul class="nav justify-content-center pb-3 mb-3">
                 <li class="nav-item">
-                    <a th:href="@{/}" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
+                    <a th:href="@{/}" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}"></a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/features}" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
+                    <a th:href="@{/features}" class="nav-link px-2 text-dark fs-5" th:text="#{features}"></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{pricing}">Pricing</a>
+                    <a th:href="@{/FAQs}" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}"></a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/FAQs}" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}">FAQs</a>
+                    <a th:href="@{/feedback}" class="nav-link px-2 text-dark fs-5" th:text="#{feedback}"></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{about}">About</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{about}"></a>
                 </li>
             </ul>
             <p class="text-center text-dark fs-5">© 2024 Company, Inc</p>
