--- a/TestingEz/src/main/resources/templates/impr-ideas.html
+++ b/TestingEz/src/main/resources/templates/impr-ideas.html
@@ -16,7 +16,7 @@
                     </button>
                     <a class="w-50 btn btn-dark border border-2 rounded dis"
                        th:text="#{disapprove}"
-                       th:href="@{/user/improvements/delete/{id}(id=${ideaData.id})}"></a>
+                       th:href="@{/feedback/disapprove/{id}(id=${ideaData.id})}"></a>
                 </div>
             </div>
         </div>
