--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -3,7 +3,7 @@
       xmlns:sec='http://www.thymeleaf.org/extras/spring-security'>
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
-<div class="d-flex flex-column gap-3">
+<div class="d-flex flex-column vh-100 gap-3">
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column justify-content-center flex-grow-1 gap-3">
@@ -88,36 +88,9 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-center border-top border-2">
-            <div class="col-sm-10 col-md-6 my-5">
-                <div class="bg-light border border-2 rounded shadow p-3 d-flex flex-column justify-content-center align-items-center">
-                    <h4 th:text="#{helpUs}"></h4>
-                    <span th:text="#{howToImprove}"></span>
-                    <form
-                            th:action="@{/user/improvements/post}"
-                            th:object="${improvementData}"
-                            method="post"
-                            class="text-center">
-                        <input class="border border-2 rounded px-1 w-100 mb-1"
-                               id="idea"
-                               type="text"
-                               th:field="*{idea}">
-                        <button class="btn btn-dark border border-2 border-black px-5" id="is" type="submit"
-                                th:text="#{send}">
-                        </button>
-                        <div class="text-danger fs-6"
-                             th:errors="*{idea}"
-                             th:if="${#fields.hasErrors('idea')}">
-                        </div>
-                        <div th:if="${sent}" class="text-success fs-6" th:text="#{thanks}">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
     </main>
     <div class="position-fixed bottom-0 end-0 p-3">
-        <a th:href="@{/user/improvement/ideas(page=0, size=5)}"
+        <a th:href="@{/feedback/all}"
            class="nav-link"
            th:if="${ideasAvailable == true}"
            sec:authorize="hasRole('ROLE_ADMINISTRATOR')">
