--- a/TestingEz/src/main/resources/templates/feedback.html
+++ b/TestingEz/src/main/resources/templates/feedback.html
@@ -11,7 +11,7 @@
                     <span th:text="#{howToImprove}"></span>
                     <form
                             th:action="@{/feedback/post}"
-                            th:object="${improvementData}"
+                            th:object="${feedbackDTO}"
                             method="post"
                             class="text-center">
                         <input class="border border-2 rounded px-1 w-100 mb-1"
